# bugnist

./: .gitignore  README.md  pyproject.toml
bugnist/: __init__.py  constants.py  dataset.py
scripts/: bugNIST_metric.py  classify_test_images.py  extract_bounding_boxes.py  extract_training_features.py  plot_annotated_image.py
