[tool.poetry]
name = "bugnist"
version = "0.1.0"
description = ""
authors = ["Daniel <huffdanielt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
torch = "^2.2.1"
scikit-image = "^0.22.0"
pandas = "^2.2.1"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
