[tool.poetry]
name = "bugnist"
version = "0.1.0"
description = ""
authors = ["Daniel <huffdanielt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
torch = "^2.2.1"
scikit-image = "^0.22.0"
pandas = "^2.2.1"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
tifffile = "^2024.2.12"
matplotlib = "^3.8.3"
torchvision = "^0.17.1"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
